--- a/src/style/style.css
+++ b/src/style/style.css
@@ -63,6 +63,7 @@ a:hover {
 }
 
 .first-section {
+    margin-top: 2rem;
     padding: 2rem 4rem;
     background-color: #D9D9D9;
     display: flex;
